text pulled in update field

--- a/app/src/main/res/layout/fragment_update_todo.xml
+++ b/app/src/main/res/layout/fragment_update_todo.xml
@@ -12,7 +12,7 @@
     android:orientation="vertical"
     >
     <EditText
-        android:id="@+id/edit_text_title"
+        android:id="@+id/title_up"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -20,7 +20,7 @@
         android:hint="Enter Title" />
 
     <EditText
-        android:id="@+id/edit_text_description"
+        android:id="@+id/description_up"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter Description" />
