--- a/app/src/main/res/layout/fragment_update_todo.xml
+++ b/app/src/main/res/layout/fragment_update_todo.xml
@@ -30,6 +30,7 @@
 </LinearLayout>
 
     <Button
+        android:id="@+id/btnUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Update"
