--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardElevation="2dp">
+    app:cardBackgroundColor="#FAF9F6">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,8 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_weight="1"
-            android:layout_marginBottom="5dp">
+            android:layout_weight="1">
 
             <!--============Title================-->
             <TextView
@@ -29,6 +27,7 @@
                 android:text="Title"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
